--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "postinstall": "npm run compile"
   },
   "dependencies": {
-    "colyseus": "^0.15.19",
     "@colyseus/schema": "^2.0.34",
-    "express": "^4.18.2",
+    "cannon-es": "^0.20.0",
+    "colyseus": "^0.15.19",
     "cors": "^2.8.5",
-    "cannon-es": "^0.20.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.2.2",
+    "@types/express": "^4.17.21",
+    "@types/keyv": "^3.1.4",
+    "@types/node": "^20.8.10",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
